<resources>
    <string name="app_name">party_android</string>
    <string name="title_main">메인 화면</string>
    <string name="title_location">장소 찾기</string>
    <string name="title_location_gps">위치로 찾기</string>
    <string name="title_pocket">찜 목록</string>
    <string name="title_account">나의 정보</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>