<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_main"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_main"/>

    <item
        android:id="@+id/navigation_location"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/title_location"/>

    <item
        android:id="@+id/navigation_location_gps"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_my_location_24"
        android:title="@string/title_location_gps"/>

    <item
        android:id="@+id/navigation_pocket"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_archive_24"
        android:title="@string/title_pocket"/>

    <item
        android:id="@+id/navigation_account"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_account"/>
</menu>